--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Photo Contest
 server.error.include-stacktrace=never
-database.url=jdbc:mariadb://localhost:3306/photo_contest
-database.username=${mySQLUser}
-database.password=${mySQLPassword}
+spring.datasource.url=jdbc:mariadb://localhost:3306/photo_contest
+spring.datasource.username=${mySQLUser}
+spring.datasource.password=${mySQLPassword}
 
 spring.web.resources.static-locations=classPath:/static/
