--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.security:spring-security-core:6.3.0'
 }
+
+
+
 
 tasks.named('test') {
     useJUnitPlatform()
