--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,8 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/photo_contest
 spring.datasource.username=${mySQLUser}
 spring.datasource.password=${mySQLPassword}
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+
 spring.web.resources.static-locations=classPath:/static/
