--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.cloudinary:cloudinary-http44:1.36.0'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4' // new
+    implementation 'org.hibernate.common:hibernate-commons-annotations:6.0.6.Final' // new
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
